--- a/.travis.yml
+++ b/.travis.yml
@@ -15,3 +15,4 @@ before_install:
 script:
   - julia -e 'Pkg.init(); run(`ln -s $(pwd()) $(Pkg.dir("Isotonic"))`); Pkg.pin("Isotonic"); Pkg.resolve()'
   - julia -e 'using Isotonic; @assert isdefined(:Isotonic); @assert typeof(Isotonic) === Module'
+  - julia ./run_tests.jl
